--- a/pages/Entertainment/entertainment.html
+++ b/pages/Entertainment/entertainment.html
@@ -184,34 +184,32 @@
                 <div class="sidebar-section">
                     <h2>Latest News</h2>
                     <div>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a>Kolkata rape-murder case: Alia Bhatt, Ayushmann Khurrana, Kareena Kapoor, Kangana Ranaut demand justice for victim, call out patriarchy: ‘Don’t tell women to change their path’</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a>Stree 2 movie review: Shraddha Kapoor, Rajkummar Rao film dumbs down a sharp premise</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a>AR Rahman is a very religious man, reveals Gulzar: ‘If there’s a shrine on the way to airport,
+                             he wouldn’t proceed without offering prayers’</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a>Brad Pitt reflects on his acting career entering its ‘last leg’; George Clooney explains aging actors’ fears of losing roles</a>
+                        <hr>
+                        
                     </div>
                     <button>Load More +</button>
                 </div>
                 <div class="sidebar-section">
                     <h2>Popular News</h2>
                     <div>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a>Suga’s DUI case: New CCTV footage shows BTS member falling off scooter while drunk, BigHit confirms he is not leaving group</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a>Kapil Sharma confirms The Great Indian Kapil Show to return soon on Netflix: ‘Season 2 is on the way’</a>
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a>
+                            Blake Lively breaks silence after facing backlash for It Ends With Us publicity
+                        </a>
+                        
                         <hr>
-                        <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora repudiandae rerum
-                            voluptatibus iure necessitatibus dicta.</a>
+                        <a>Akshay Kumar, Kamal Haasan, Allu Arjun send Independence Day 2024 wishes: ‘May our flag fly high, hearts soar with pride’.</a>
                     </div>
                     <button>Load More +</button>
                 </div>
