second business page created

--- a/pages/Business/business_news_2.html
+++ b/pages/Business/business_news_2.html
@@ -63,32 +63,37 @@
         <!--Read More content started-->
         <div class="readmore-heading-details">
             <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
-            <h1>Adani now allowed to sell Bangladesh-bound power in India</h1>
+            <h1>Sensex snaps two-day losing streak on rebound in IT shares</h1>
         </div>
 
         <div class="img_container">
-            <img src="./../../images/adani_company.jpg" alt="Adani Business" class="front_img" />
+            <img src="./../../images/market_business.jpg" alt="Adani Business" class="front_img" />
             <div class="information_block">
-                An Adani Power (ADAN.NS), opens new tab coal-fired power plant under contract to sell all its output to
-                Bangladesh can now supply the domestic market after an amendment to India's power export rules, helping
-                the company hedge against political risks in Bangladesh.
-                An internal federal power ministry memo, dated Aug. 12 and seen by Reuters, amends 2018 guidelines
-                governing generators supplying electricity "exclusively to a neighbouring country". Currently only one
-                plant in India - Adani Power's 1,600 megawatt (MW) Godda plant in eastern Jharkhand state - is under
-                contract to export 100% of its power to a neighbouring country.
-                The memo says "the government of India may permit connection of such generating station to the Indian
-                grid to facilitate sale of power within India in case of sustained non-scheduling of full or part
-                capacity".
-                The move, which happened nearly a week after longtime Prime Minister Sheikh Hasina fled Bangladesh amid
-                deadly protests triggered by quotas for government jobs, could also benefit future projects where all
-                output is locked into export contracts.
-                Bangladesh is battling anarchy and vandalism, with a caretaker government vowing that improving law and
-                order was its top priority.
-                The amendment by the Indian government also allows sale of power to the local grid if there is a delay
-                in payments.
-                The conglomerate called the plant a "shining example of India-Bangladesh cooperation" in July 2023,
-                shortly after its billionaire Chairman Gautam Adani met Hasina following full-load commissioning of the
-                plant.
+                Mumbai, Aug 14 (PTI) Snapping its two-day losing streak, benchmark BSE Sensex closed higher by 150
+                points on Wednesday following a rally in IT stocks amid a surge in the US markets on renewed hopes of a
+                rate cut by the Fed in September.
+                The 30-share BSE Sensex rose by 149.85 points or 0.19 per cent to settle at 79,105.88 with half of its
+                constituents ending higher. During the day, it gained 272.91 points or 0.34 per cent to hit a high of
+                79,228.94.
+
+                The NSE Nifty closed marginally up by 4.75 points or 0.02 per cent at 24,143.75. As many 26 Nifty shares
+                closed lower while 24 advanced.
+                The domestic market traded within a narrow range; even as global markets saw a positive turnaround. The
+                IT index edged up, reflecting optimism for improved US CPI data expected later today, which could
+                increase the scope of a loose monetary policy from the Fed,” said Vinod Nair, Head of Research, Geojit
+                Financial Services.
+
+                Among Sensex firms, Tata Consultancy Services rose the most by 2.3 per cent. HCL Technologies, Tech
+                Mahindra, Infosys, Mahindra & Mahindra and Tata Motors were the biggest gainers.
+
+                On the other hand, UltraTech Cement, JSW Steel, Tata Steel, Adani Ports, Power Grid and Bajaj Finserv
+                were among the laggards.
+
+                Mining shares declined after the Supreme Court rejected the Centre’s plea for prospective effect of its
+                July 25 verdict, which upheld the power of states to levy tax on mineral rights and mineral-bearing
+                land, and allowed them to seek a refund of royalty from April 1, 2005 onwards.
+
+                NMDC tanked 6 per cent, Hind Copper by over 4 per cent, Nalco by 2.7 per cent.
             </div>
         </div>
 
