--- a/pages/Business/Business_News.html
+++ b/pages/Business/Business_News.html
@@ -80,7 +80,7 @@
                         <div class="homepage-Card">
                             <h3>Sensex snaps two-day losing streak on rebound in IT shares</h3>
                             <p>Benchmark Sensex closed higher by 150 points on Wednesday, snapping its two-day losing streak following a rally in IT stocks amid a surge in the US markets.</p>
-                            <a href="">Read more</a>
+                            <a href="business_news_2.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
