completed football page

--- a/pages/sport/hocky.html
+++ b/pages/sport/hocky.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="top-nav-search-bar">
                         <input type="text" placeholder="Search news" />
-                        <img src="./images/magnifying-glass.png" />
+                        <img src="../../images/magnifying-glass.png" />
                     </div>
                 </div>
             </div>
@@ -57,49 +57,107 @@
     </header>
 
     <!-- End here navbar  -->
+     <!-- End here navbar  -->
+<div class="container0">
+    <h1 style="text-align: center">'GREAT WALL':Sreejesh is a legend of hockey : India teammates</h1>
+<br><br>
+<p><span style="text-align: left;">
+    Date:Aug 12,2022<br>
+    Time:11.21 am<br>
+    Refers:Timeofindia<br>
+</span>
+</p>
+    <img src="../../images/hockey"style="height:400px;margin:20px">
+    <br>
+ <span style="font-size:12px;text-align: center;"></span>India players pay tribute to goalkeeper PR Sreejesh as they 
+ <br>
+<p>India's hockey team, led by PR Sreejesh, won a bronze medal at the Paris Olympics by defeating Spain 2-1. 
+    Fellow players praised Sreejesh, who recently retired, calling him a legend and an inspiration for future generations. 
+    Harmanpreet Singh, the tournament's top scorer, also received accolades for his leadership and performance.</p>
+    <p>New Delhi: Just-retired India goalkeeper PR Sreejesh is a legend of the game and will inspire the next generation of hockey players in the country, said his teammates on Saturday, after returning from Paris Olympics with a second successive bronze medal.
+        Eight-time Olympic champions India clinched a bronze medal in Paris, beating Spain 2-1 in the play-off match. The last of India’s Olympic hockey golds came in 1980.
+
+    </p>
+    <p>“Sreejesh is the best person, a legend, and India calls him the ‘Great Wall’, amazing, that is all I can say he played his best hockey, and he has contributed to the country by playing hockey, and the standard he has set as a goalkeeper, it will inspire the next generation,” forward Lalit Upadhyay said during a felicitation ceremony in Delhi.</p>
+<p>“I would like to thank the entire country because of the overwhelming support you have given to hockey, like the last time but even more so now, hockey is still in the hearts of people, they continue to love the sport and continue to support.”
+    Lalit was also full of praise for inspirational skipper Harmanpreet Singh, who scored 10 goals to emerge as the highest scorer of the tournament.
+    “The country has given him (Harmanpreet) a new nickname (Sarpanch). I am glad that the country gave him this nickname, the ones who love hockey, as a great captain, he has shown his character and to be the top scorer of the Olympics is a big achievement.</p>
+    <p>“He is a legend, there is much more to do now, and our vision is that we move forward and we can change the colour of the medal and achieve our dream.”
+        Lalit recollected the fighting spirit shown by the side against Great Britain in the quarterfinal when they were down to 10 men for more than 40 minutes of the match but eventually came out winners.
+        “I would like to thank the coaching staff and all the players, we played like a cohesive unit and showed the character of the team, we had to give it our all, because in that moment we had no option to back down. That was the match and I cannot say more,” he said.
+        Defender Jarmanpreet Singh wished Sreejesh luck following his retirement from hockey.</p>
+        <p>“I do not need to say anything about Sreejesh, the entire country praises him and has seen him play, they all call him the ‘Wall’, he is a legend and a great player. I had a lot of fun playing hockey with him, and I wish Sreejesh continues to do good work for hockey,” he said.
+            He also praised skipper Harmanpreet’s effort in the tournament.
+            “Harmanpreet is a goal machine of the team and we receive a lot of help from him he is the ‘Sarpanch’.”
+            Jarmanpreet was happy with his own performance in his maiden Olympics.
+            “I enjoyed myself at this year’s Olympics, this was my first Olympics, and my target was to perform well for my team and the country.</p>
+</div>
+
+<!-- footer has been started from here -->
+
+<footer>
+    <div class="footer-section">
 
 
+        <div class="footer-nav-links">
+            <h3>Subscribe to our Newsletter</h3>
+            <form>
+                <input type="email" name="email" placeholder="Your email" required>
+                <input type="text" name="name" placeholder="Your name" required>
+                <button type="submit">Subscribe</button>
+            </form>
+        </div>
+        <div class="footer-nav-links">
+            <h3>Links</h3>
+            <ul>
+                <li><a href="./../../index.html">Home</a></li>
+                <li><a href="./../aboutusPage.html">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </div>
+        <div class="footer-nav-links">
+            <h3>Important Links</h3>
+            <ul>
+                <li><a href="./../../index.html">world news</a></li>
+                <li><a href="./../sport/sport.html">Sports</a></li>
+                <li><a href="./../tech/tech.html">Tech</a></li>
+                <li><a href="">Entertainment</a></li>
+                <li><a href="./../Business/Business_News.html">Business</a></li>
+                <li><a href="./../culture.html">Culture</a></li>
+                <li><a href="">Education</a></li>
+            </ul>
+        </div>
+        <div class="footer-nav-links">
+            <h3>Address</h3>
+            <ul>
+                <li>4567 Shivaji Lane</li>
+                <li>Chatrapati Nagar, Ward 12</li>
+                <li>Nagpur, Maharashtra 440018
+                    India</li>
+            </ul>
+            <div class="footer-follow-us-Container">
+                <h3>Follow Us</h3>
+                <div class="top-nav-icons">
+                    <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
+                            alt="facebook-icon" target="_blank"></a>
+                    <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
+                            alt="instagram-icon"></a>
+                    <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
+                            alt="telegram-icon"></a>
+                    <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
+                            alt="youtube-icon"></a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer-copyright-section">
+        <p>Copyright © 2024 The News Reporter. All rights reserved | Design by ICP-9.0 Group 9 </p>
+    </div>
+</footer>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
-    
+<!-- footer has been ended here -->    
 </body>
 </html>
+
+
