--- a/pages/Business/Business_News.html
+++ b/pages/Business/Business_News.html
@@ -98,12 +98,12 @@
                         <div class="homepage-Card">
                             <h3>Ola Electric posts bigger Q1 loss as incentives drop, costs rise</h3>
                             <p>Ola Electric reported a wider first-quarter loss August 14, 2024, hurt by the price cuts it took to boost demand after the government reduced incentives.</p>
-                            <a href="">Read more</a>
+                            <a href="business_news_4.html">Read more</a>
                         </div>
                     </div>
                     <div class="card">
                         <img src="./../../images/agriculture_business.jpeg"
-                            alt="Business_news 4">
+                            alt="Business_news 5">
                         <div class="homepage-Card">
                             <h3>VST ropes in Axis Bank to offer loan to farmers</h3>
                             <p>VST Tillers Tractors Limited (VST), a farm equipment manufacturer, signed a Memorandum of Understanding (MOU) with Axis Bank</p>
@@ -112,7 +112,7 @@
                     </div>
                     <div class="card">
                         <img src="./../../images/money_business.jpg"
-                            alt="">
+                            alt="Business_news 6">
                         <div class="homepage-Card">
                             <h3>Rupee rises 7 paise against US dollar in early trade</h3>
                             <p>The Indian rupee appreciated 7 paise to 83.90 against the US dollar on August 14 2024 American currency retreated from its elevated levels.</p>
