--- a/pages/Business/business_news_6.html
+++ b/pages/Business/business_news_6.html
@@ -63,33 +63,44 @@
         <!--Read More content started-->
         <div class="readmore-heading-details">
             <a href="Business_News.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
-            <h1>VST ropes in Axis Bank to offer loan to farmers</h1>
+            <h1>Rupee rises 7 paise against US dollar in early trade</h1>
         </div>
 
         <div class="img_container">
-            <img src="./../../images/agriculture_business.jpeg" alt="agriculture_business" class="front_img" />
+            <img src="./../../images/money_business_2.jpg" alt="money_business" class="front_img" />
             <div class="information_block">
-                VST Tillers Tractors Limited (VST), a farm equipment manufacturer, signed a Memorandum of Understanding
-                (MOU) with Axis Bank, to offer financial solutions to the farmers for purchasing tractors and Farm
-                Mechanisation products.
+                The Indian rupee appreciated 7 paise to ₹83.90 against the US dollar in early trade on Wednesday, as the
+                American currency retreated from its elevated levels.
 
-                As per the agreement, Axis Bank will provide financial solutions to VST’s prospective customers through
-                its network of 5370 branches.
+                Forex traders said the US dollar has weakened against majors post the US Producer Price Index (PPI)
+                print, which came in softer than anticipated, leaving the Dollar Index vulnerable to further correction.
 
-                As per the MOU both the companies would leverage their extensive footprint to reach out to the farmers
-                community to ensure that they have an easy access to credit facility for adapting farm mechanisation,
-                the company said.
+                At the interbank foreign exchange, the rupee opened at ₹83.90 against the greenback, registering a gain
+                of 7 paise over its previous close.
 
-                This partnership is expected to enable farmers to avail hassle-free, affordable, and flexible credit
-                facilities to transform the agricultural sector, said the company.
+                On Tuesday, the rupee settled for the day on a flat note at ₹83.97 against the US dollar.
 
-                The Bank would offer flexible repayment options, swift sanctions, and special benefits on EMI options to
-                encourage the farmers to opt for adapting farm mechanisation.
+                The Reserve Bank of India has been holding the ₹84.00 psychological mark, said Anil Kumar Bhansali, Head
+                of Treasury and Executive Director Finrex Treasury Advisors LLP.
 
-                “Mr. Antony Cherukara, CEO, of VST Tillers Tractors Ltd. said, “At VST, it is our constant endeavour to
-                facilitate ease of farming, by bringing down the overall time and cost of farming and improving output
-                and farm income. MoU will especially help small and marginal farmers in availing hassle-free credit
-                facilities for buying our products.”
+                "The rupee is expected to open around ₹83.91 slightly stronger with a narrow range of 83.87/83.97, as
+                the market awaits the Indian trade data for July-24," Bhansali added.
+
+                Forex traders said market participants are also awaiting cues from the CPI data from the US scheduled to
+                be released later in the day.
+
+                Meanwhile, the dollar index, which gauges the greenback's strength against a basket of six currencies,
+                was trading marginally higher by 0.10% at 102.66.
+
+                Brent crude, the global oil benchmark, advanced 0.57% to USD 81.15 per barrel.
+
+                On the domestic equity market front, Sensex declined 24.66 points, or 0.03%, to 78,931.37 points. The
+                Nifty fell 11.10 points, or 0.05%, to 24,127.90 points.
+
+                Foreign institutional investors (FIIs) were net sellers in the capital markets on Tuesday as they
+                offloaded shares worth ₹2,107.17 crore, according to exchange data.
+
+
             </div>
         </div>
 
