--- a/pages/Business/Business_News.html
+++ b/pages/Business/Business_News.html
@@ -116,7 +116,7 @@
                         <div class="homepage-Card">
                             <h3>Rupee rises 7 paise against US dollar in early trade</h3>
                             <p>The Indian rupee appreciated 7 paise to 83.90 against the US dollar on August 14 2024 American currency retreated from its elevated levels.</p>
-                            <a href="">Read more</a>
+                            <a href="business_news_6.html">Read more</a>
                         </div>
                     </div>
                 </div>
