card 5th and 6th added

--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -58,7 +58,7 @@
         <div class="homepage-content">
             <div class="homepage-Cards-container">
                 <div class="homepage-heading-details">
-                    <h1>From Around the World</h1>
+                    <h1>Education News</h1>
                 </div>
                 <div class="cards">
                     <div class="card">
@@ -94,7 +94,7 @@
 
                 <div class="hompage-second-card-container">
                     <div class="homepage-heading-details">
-                        <h1>latest articles</h1>
+                
                     </div>
 
                     <div class="cards">
@@ -108,20 +108,20 @@
                             </div>
                         </div>
                         <div class="card">
-                            <img src="../../images/tech img 3.jpg"
+                            <img src="../../images/rajasthan.avif"
                                 alt="">
                             <div class="homepage-Card">
-                                <h3>Instagram features to let user keep friends update on their location.</h3>
-                                <p>Instagram is reportedly working on allowing users to share real-time updates with their friends on a map to get their locations.</p>
+                                <h3>RBSE canceled the 2024 exams of 24 candidates for cheating.</h3>
+                                <p> RBSE canceled the exams of 24 students for cheating.These students were found using unfair means, resulting in the cancellation of their results. </p>
                                 <a href="">Read more</a>
                             </div>
                         </div>
                         <div class="card">
-                            <img src="../../images/tech img4.avif"
+                            <img src="../../images/card6img.avif"
                                 alt="">
                             <div class="homepage-Card">
-                                <h3>Anushka, the low-cost humanoid robot built parts from dump yard.</h3>
-                                <p>With emergence of generative AI, existing robots like Sophia developed by Hanson Robotics,a future with fully-realised robots doesn’t seem distant.</p>
+                                <h3>Manav Rachna: A global center for knowledge, innovation , research </h3>
+                                <p>A vibrant, forward-thinking and innovative institution, Manav Rachna has been inculcating the best of values in students </p>
                                 <a href="">Read more</a>
                             </div>
                         </div>
