news cards created

--- a/pages/worldnews/worldnews.html
+++ b/pages/worldnews/worldnews.html
@@ -60,4 +60,61 @@
         <div class="homepage-content">
             <div class="homepage-Cards-container">
                 <div class="homepage-heading-details">
-                    <h1>World News</h1>  
+                    <h1>World News</h1>
+                </div>
+                <div class="cards">
+                    <div class="card">
+                        <img src="./../../images/gaza1.webp"
+                            alt="world_news 1">
+                        <div class="homepage-Card">
+                            <h3>Hamas-run health ministry reports that more than 40,000 people have been killed in Gaza.</h3>
+                            <p>The actual number of people killed in the war is likely to be much higher (more than 1.8% of 2.3 millions), local officer says.</p>
+                            <a href="worldnews_1.html" class=".read-more">Read more</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./../../images/indian-doctor.webp"
+                            alt="Business_news 2">
+                        <div class="homepage-Card">
+                            <h3>Indian doctors stage nationwide strike after trainee doctor is raped and killed</h3>
+                            <p>Medical associations nationwide demanded a federal law protecting health care workers, who are regularly assaulted at hospitals.</p>
+                            <a href="worldnews_2.html" class=".read-more">Read more</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./../../images/monkeypoxx.webp"
+                            alt="Business_news 3">
+                        <div class="homepage-Card">
+                            <h3>The WHO warns that Europe is likely to see a rise in monkeypox cases in the near future.</h3>
+                            <p>The World Health Organization expects more imported Clade 1 mpox cases in Europe after Sweden reported the first case outside Africa on Thursday.</p>
+                            <a href="worldnews_3.html" class=".read-more">Read more</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./../../images/matthew-perry.jpeg"
+                            alt="Business_news 4">
+                        <div class="homepage-Card">
+                            <h3>"Took Advantage Of His Addiction": 5 Charged Over Matthew Perry's Death</h3>
+                            <p>Matthew Perry, who played Chandler Bing on the popular TV sitcom from 1994 to 2004, was found unresponsive in his swimming pool last year at age 54.</p>
+                            <a href="worldnews_4.html" class=".read-more">Read more</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./../../images/ksenia-karelina.webp"
+                            alt="Business_news 4">
+                        <div class="homepage-Card">
+                            <h3>L.A. ballerina sentenced to 12 years in Russian penal colony for 'high treason'</h3>
+                            <p>Ksenia Karelina was visiting family in Russia when investigators searched her phone and found she had donated to a Ukrainian charity.</p>
+                            <a href="worldnews_5.html" class=".read-more">Read more</a>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./../../images/taylor swift.webp"
+                            alt="">
+                        <div class="homepage-Card">
+                            <h3>Taylor Swift fans flock to London for final leg of Eras Tour after Vienna terrorism plot</h3>
+                            <p>Swiftie festivities in London are in full swing amid tightened security as the European leg of the Eras Tour takes its final bow..</p>
+                            <a href="worldnews_6.html" class=".read-more">Read more</a>
+                        </div>
+                    </div>
+                </div>
