--- a/pages/worldnews/worldnews_1.html
+++ b/pages/worldnews/worldnews_1.html
@@ -76,6 +76,76 @@
             The Israel Defense Forces said they have killed more than 15,000 combatants throughout the course of the war.
             The true death toll in Gaza, after more than 10 months of war, could be significantly higher than the Health Ministry’s figure because officials in Gaza estimate that an additional 10,000 people in Gaza are unaccounted for because of the war.
             Casey Harrity from Wyoming, who is working in Gaza for the non-governmental organization Save the Children International, agrees that the true death toll from the war is "far higher."
+        </div>
+    </div>
+
+    <!-- footer has been started from here -->
+
+    <footer>
+        <div class="footer-section">
+            <div class="footer-nav-links">
+                <h3>Subscribe to our Newsletter</h3>
+                <form>
+                    <input type="email" name="email" placeholder="Your email" required>
+                    <input type="text" name="name" placeholder="Your name" required>
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+            <div class="footer-nav-links">
+                <h3>Links</h3>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">Login</a></li>
+                </ul>
+            </div>
+            <div class="footer-nav-links">
+                <h3>Important Links</h3>
+                <ul>
+                    <li><a href="">world news</a></li>
+                    <li><a href="">Sports</a></li>
+                    <li><a href="">Tech</a></li>
+                    <li><a href="">Entertainment</a></li>
+                    <li><a href="">Business</a></li>
+                    <li><a href="">Culture</a></li>
+                    <li><a href="">Education</a></li>
+                </ul>
+            </div>
+            <div class="footer-nav-links">
+                <h3>Address</h3>
+                <ul>
+                    <li>4567 Shivaji Lane</li>
+                    <li>Chatrapati Nagar, Ward 12</li>
+                    <li>Nagpur, Maharashtra 440018
+                        India</li>
+                </ul>
+                <div class="footer-follow-us-Container">
+                    <h3>Follow Us</h3>
+                    <div class="top-nav-icons">
+                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
+                                alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
+                                alt="instagram-icon"></a>
+                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
+                                alt="telegram-icon"></a>
+                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
+                                alt="youtube-icon"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright-section">
+            <p>Copyright © 2024 The News Reporter. All rights reserved | Design by ICP-9.0 Group 9 </p>
+        </div>
+    </footer>
+
+    <!-- footer has been ended here -->
+
+
+</body>
+
+</html>
 
 
 
