--- a/pages/worldnews/worldnews_2.html
+++ b/pages/worldnews/worldnews_2.html
@@ -56,4 +56,27 @@
             </div>
         </nav>
     </header>
+    
+    <!--Read More content started-->
+    <div class="readmore-heading-details">
+        <a href="worldnews.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <h1>Indian doctors stage nationwide strike after trainee doctor is raped and killed</h1>
+    </div>
+
+    <div class="img_container">
+        <img src="./../../images/doctorkolkata.avif" alt="kolkata case" class="front_img" />
+        <div class="information_block">
+            Doctors took to the streets across India on Wednesday to demand sweeping changes to health care worker protections after a female student doctor was raped and murdered last week at a government-run hospital.
+            The strike came as federal investigators arrived in the eastern city of Kolkata, the capital of West Bengal state, where the incident happened, following demands from protesters for an inquiry.           
+            According to state-owned All India Radio, federal forensic experts and medical officers were expected to visit the R.G. Kar Medical College and Hospital, where authorities found the body of the 31-year-old resident doctor in a seminar hall Friday.          
+            Police said that the woman's body showed signs of sexual abuse, as well as several injuries, and that a suspect has been arrested.           
+            A wave of anger broke over Kolkata last week as doctors, who have long complained about working conditions in India's dilapidated and overcrowded government hospitals, declared a strike, bringing elective procedures to a standstill.           
+            In 2021, the Indian Medical Association (IMA) — one of India's largest doctor groups — said over 75% of the country’s doctors had faced some form of violence, most of it from patients’ caregivers.The case also highlights India’s long struggle to tackle violence against women, despite some of the world’s most stringent laws. 
+            Medical associations across the country joined the action, calling for a federal investigation and an overhaul of security measures at hospitals. The protestors say the laws in some states are largely ineffective, necessitating a law at the federal level.
+        </div>
+    </div>
+
+    <!-- footer has been started from here -->
+
+
 
