--- a/pages/worldnews/worldnews_3.html
+++ b/pages/worldnews/worldnews_3.html
@@ -44,3 +44,23 @@
                 </div>
             </div>
 
+            <div>
+                <ul class="nav-list">
+                    <li><a href="">world news</a></li>
+                    <li><a href="">Sports</a></li>
+                    <li><a href="./../tech/tech.html">Tech</a></li>
+                    <li><a href="">Entertainment</a></li>
+                    <li><a href="">Business</a></li>
+                    <li><a href="">Culture</a></li>
+                    <li><a href="">Education</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <!--Read More content started-->
+    <div class="readmore-heading-details">
+        <a href="worldnews.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <h1>The WHO warns that Europe is likely to see a rise in monkeypox cases in the near future</h1>
+    </div>
+
