Reader content for wn3 added

--- a/pages/worldnews/worldnews_3.html
+++ b/pages/worldnews/worldnews_3.html
@@ -64,3 +64,18 @@
         <h1>The WHO warns that Europe is likely to see a rise in monkeypox cases in the near future</h1>
     </div>
 
+    <div class="img_container">
+        <img src="./../../images/monkeypoxsub.jpeg" alt="monkey poxx" class="front_img" />
+        <div class="information_block">
+            The WHO on Thursday warned further imported cases of the new, more dangerous mpox strain in Europe were likely, after Sweden announced the first such infection outside Africa in an outbreak that has killed hundreds in the DR Congo.
+            The case recorded in a traveller in Sweden was announced the day after the World Health Organization declared the mpox surge in Africa a public health emergency of international concern -- the highest alarm it can sound.
+            The UN health agency was concerned by the rise in cases and fatalities in the Democratic Republic of Congo, and the spread to Burundi, Kenya, Rwanda and Uganda.
+            Sweden's Public Health Agency told AFP on Thursday that it had registered a case of the Clade 1b subclade -- the same new strain of the virus that has surged in the DRC since September 2023.           
+            "A person who sought care" in Stockholm "has been diagnosed with mpox caused by the clade 1 variant. It is the first case caused by clade I to be diagnosed outside the African continent," the agency said in a separate statement.           
+            The person was infected during a visit to "the part of Africa where there is a major outbreak of mpox Clade 1", state epidemiologist Magnus Gisslen said in the statement.           
+            The agency added: "The fact that a patient with mpox is treated in the country does not affect the risk to the general population, a risk that the European Centre for Disease Prevention and Control (ECDC) currently considers very low."
+            
+            
+        </div>
+    </div>
+
