--- a/pages/worldnews/worldnews_4.html
+++ b/pages/worldnews/worldnews_4.html
@@ -56,5 +56,23 @@
             </div>
         </nav>
     </header>
+    
+    <!--Read More content started-->
+    <div class="readmore-heading-details">
+        <a href="worldnews.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <h1>"Took Advantage Of His Addiction": 5 Charged Over Matthew Perry's Death</h1>
+    </div>
+
+    <div class="img_container">
+        <img src="./../../images/matthewsub.jpg" alt="matthew-perry" class="front_img" />
+        <div class="information_block">
+            US prosecutors said Thursday they have charged five people, including two doctors, over the death of "Friends" star Matthew Perry, who died at his Los Angeles home last year after years of struggling with addiction."These defendants took advantage of Mr Perry's addiction issues to enrich themselves. They knew what they were doing was wrong. They knew what they were doing was risking great danger to Mr Perry, but they did it anyway," said US Attorney Martin Estrada.
+            Five people have been charged for their involvement in the drug-related death of Matthew Perry.
+            The actor, famed for his role as Chandler Bing in the sitcom Friends, died in his Los Angeles home in October 2023. A post-mortem examination found a high concentration of ketamine in his blood and determined the "acute effects" of the controlled substance had killed him.
+            Police say that a criminal network "took advantage of his addiction issues".
+            Authorities in Matthew Perry's death investigation said Aug. 15 that the Friends actor "fell back into addiction" in the fall of 2023 and the five defendants charged in the case "took advantage."
+        </div>
+    </div>
+
 
 
