reader content added

--- a/pages/worldnews/worldnews_5.html
+++ b/pages/worldnews/worldnews_5.html
@@ -42,3 +42,40 @@
                         <img src="./../../images/magnifying-glass.png" />
                     </div>
                 </div>
+            </div>
+
+            <div>
+                <ul class="nav-list">
+                    <li><a href="">world news</a></li>
+                    <li><a href="">Sports</a></li>
+                    <li><a href="./../tech/tech.html">Tech</a></li>
+                    <li><a href="">Entertainment</a></li>
+                    <li><a href="">Business</a></li>
+                    <li><a href="">Culture</a></li>
+                    <li><a href="">Education</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <!--Read More content started-->
+    <div class="readmore-heading-details">
+        <a href="worldnews.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <h1>L.A. ballerina sentenced to 12 years in Russian penal colony for 'high treason'</h1>
+    </div>
+
+    <div class="img_container">
+        <img src="./../../images/russiansub.jpg" alt="ksenia-karelina" class="front_img" />
+        <div class="information_block">
+            A Russian court has sentenced a U.S.-Russian ballerina to 12 years in a penal colony for "high treason," accusing her of transferring funds to a Ukrainian charity in February 2022 when Russia launched its full-scale invasion of Ukraine.
+            Ksenia Karelina, 33, who is based in Los Angeles, was visiting family in Russia when investigators searched her phone and found that she had donated funds to a Ukrainian charity. A spa where she had previously worked said in a statement on Facebook that Karelina given $51.80 to a Ukrainian charity in the U.S.
+            Authorities have not confirmed that figure, and NBC News was not able to independently verify the sum or the nature of the alleged donation.
+            Karelina's sentencing, the latest in a series of detentions of citizens of Western nations in Russia, comes against the backdrop of Russia's 2½-year-long war with Ukraine.
+            Boyfriend of ballerina Ksenia Karelina speaks out after she is sentenced to 12 years in prison for allegedly organizing fundraisers for Ukraine's military and attending pro-Ukraine rallies.
+
+
+        </div>
+    </div>
+
+    <!-- footer has been started from here -->
+
