--- a/pages/worldnews/worldnews_6.html
+++ b/pages/worldnews/worldnews_6.html
@@ -10,4 +10,20 @@
 
 <body>
     <!-- started here navbar -->
+    <header>
+        <nav>
+            <div class="top-navbar">
+                <div>
+                    <h4>The</h4>
+                    <h2><span class="heading-fisrt">News</span> Reporter</h2>
+                </div>
+                <div>
+                    <ul class="top-nav-list">
+                        <li><a href="./../../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
+                        <li><a href="">Contact</a></li>|
+                        <li><a href="">Login</a></li>
+                    </ul>
+                </div>
+
 
