--- a/pages/worldnews/worldnews_6.html
+++ b/pages/worldnews/worldnews_6.html
@@ -25,5 +25,36 @@
                         <li><a href="">Login</a></li>
                     </ul>
                 </div>
+                <div>
+                    <div class="top-nav-icons">
+                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
+                                alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
+                                alt="instagram-icon"></a>
+                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
+                                alt="telegram-icon"></a>
+                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
+                                alt="youtube-icon"></a>
+                    </div>
+                    <div class="top-nav-search-bar">
+                        <input type="text" placeholder="Search news" />
+                        <img src="./../../images/magnifying-glass.png" />
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <ul class="nav-list">
+                    <li><a href="">world news</a></li>
+                    <li><a href="">Sports</a></li>
+                    <li><a href="./../tech/tech.html">Tech</a></li>
+                    <li><a href="">Entertainment</a></li>
+                    <li><a href="">Business</a></li>
+                    <li><a href="">Culture</a></li>
+                    <li><a href="">Education</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
 
