reader content for wn 6 added

--- a/pages/worldnews/worldnews_6.html
+++ b/pages/worldnews/worldnews_6.html
@@ -56,5 +56,28 @@
             </div>
         </nav>
     </header>
+    
+
+    <!--Read More content started-->
+    <div class="readmore-heading-details">
+        <a href="worldnews.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <h1>Taylor Swift fans flock to London for final leg of Eras Tour after Vienna terrorism plot</h1>
+    </div>
+
+    <div class="img_container">
+        <img src="./../../images/taylorsub.jpeg" alt="Taylor swift" class="front_img"/>
+        <div class="information_block">
+            <p>Taylor Swift has resumed her "Eras Tour" in London after canceling three shows last week due to a foiled plan for a terrorist      attack at her concert.
+            Swift kicked off a run of five shows at Wembley Stadium on Aug. 15 when doors officially opened at 3:30 p.m. London time. The show started at 4:55 p.m., or 11:55 a.m. ET, with openers Sofia Isella and Paramore.Swift was scheduled to perform at Ernst-Happel-Stadion Aug. 8, 9 and 10 for her second to last stop on the European leg of the tour. Swift confirmed the cancellations via her website. The news was originally announced by Barracuda Music, a live music promotion company in Austria.
+            Just over a week ago, three of her "Eras Tour" shows in Vienna, Austria, were canceled Aug. 7.<br>
+                
+            “With confirmation from government officials of a planned terrorist attack at Ernst Happel Stadium, we have no choice but to cancel the three scheduled shows for everyone’s safety,” Barracuda Music said in a statement. “All tickets will be automatically refunded within the next 10 business days.”
+            Austrian police arrested two men Aug. 7 who allegedly had detailed plans for carrying out attacks on major Vienna events, including Swift's concerts.
+            “The main perpetrator confessed that he wanted to carry out a suicide attack with two accomplices. He obtained explosives and weapons," Austrian Chancellor Karl Nehammer said on X Aug. 8. </p>
+        </div>
+    </div>
+
+    <!-- footer has been started from here -->
+
 
 
