--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/HomeStyles.css">
+    <link rel="stylesheet" href="./CSS/homepage.css">
     <title>The News Reporter</title>
 </head>
 
@@ -29,14 +29,10 @@
                 </div>
                 <div>
                     <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="./images/facebook.png"
-                                alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="./images/instagram.png"
-                                alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="./images/telegram.png"
-                                alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="./images/youtube.png"
-                                alt="youtube-icon"></a>
+                        <a href="http://facebook.com" target="_blank"><img src="./images/facebook.png" alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="./images/instagram.png" alt="instagram-icon"></a>
+                        <a href="https://web.telegram.org" target="_blank"><img src="./images/telegram.png" alt="telegram-icon"></a>
+                        <a href="https://youtube.com" target="_blank"><img src="./images/youtube.png" alt="youtube-icon"></a>
                     </div>
                     <div class="top-nav-search-bar">
                         <input type="text" placeholder="Search news" />
@@ -66,9 +62,7 @@
     <section class="hero-section">
         <div class="hero-content">
             <h1>Breaking News: Major Event Unfolding</h1>
-            <p>Stay updated with the latest developments on this important story. Our team is on the ground bringing you
-                the
-                most accurate and timely updates.</p>
+            <p>Stay updated with the latest developments on this important story. Our team is on the ground bringing you the most accurate and timely updates.</p>
             <a href="#">Read More</a>
         </div>
     </section>
