--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,6 +12,94 @@
     <!-- started here navbar -->
 
     <header>
+        <nav>
+            <div class="top-navbar">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </nav>
 
 
 
