--- a/pages/worldnews/worldnews.html
+++ b/pages/worldnews/worldnews.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./../../CSS/HomeStyles.css">
-    <title>The News Reporter</title>
+    <title>World News</title>
 </head>
 
 <body>
