--- a/pages/worldnews/worldnews_1.html
+++ b/pages/worldnews/worldnews_1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The News Reporter</title>
+    <title>World News</title>
     <link rel="stylesheet" href="./../../CSS/business.css" />
 </head>
 
